[gd_scene load_steps=3 format=2]

[ext_resource path="res://PostMissionScreen.gd" type="Script" id=1]
[ext_resource path="res://ScreenTransition.tscn" type="PackedScene" id=2]

[node name="PostMissionScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ScreenTransition" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Text" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionTitle" type="RichTextLabel" parent="CanvasLayer/Text"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "TESTING TEXT"
text = "TESTING TEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ElapsedTime" type="RichTextLabel" parent="CanvasLayer/Text"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
margin_bottom = 4.0
bbcode_enabled = true
bbcode_text = "TESTING TEXT"
text = "TESTING TEXT"
__meta__ = {
"_edit_use_anchors_": false
}
